--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
     "@hapi/boom": "^9.1.3",
+    "crypto-js": "^4.2.0",
     "async-lock": "^1.4.1",
     "audio-decode": "^2.1.3",
     "axios": "^1.6.0",
