--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@cacheable/node-cache": "^1.4.0",
     "@hapi/boom": "^9.1.3",
     "@whiskeysockets/eslint-config": "github:whiskeysockets/eslint-config",
+    "crypto-js": "^4.2.0",
     "async-mutex": "^0.5.0",
     "axios": "^1.6.0",
     "libsignal": "github:WhiskeySockets/libsignal-node",
