--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baileys",
-  "version": "6.7.17",
+  "version": "6.7.18-Alpha",
   "description": "WhatsApp API x Button by PL",
   "keywords": [
     "whatsapp",
