--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "whatsapp",
     "automation"
   ],
-  "homepage": "https://github.com/seiren-primrose/PL-Baileys/",
+  "homepage": "https://github.com/rendy-xd/ProBailyes.git",
   "repository": {
-    "url": "git@github.com:seiren-primrose/PL-Baileys.git"
+    "url": "git@github.com:rendy-xd/ProBailyes.git"
   },
   "license": "MIT",
   "author": "Rajeh Taher",
